# vings-request

./: README.md  index.html  package.json
docs/: MCP.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  mcp.rs  mcp_setup.rs
src-tauri/src/app_state/: globals.rs  mod.rs
src-tauri/src/http/: mod.rs  oauth.rs
src-tauri/src/store/: collection_ops.rs  env_ops.rs  fs_store.rs  mod.rs  models.rs  parser.rs  tree_ops.rs
src-tauri/tests/: mcp_dispatch.rs
src/components/: AuthTab.tsx  EnvEditor.tsx  EnvSelector.tsx  HighlightedInput.tsx  McpPanel.tsx  RequestBuilder.tsx  VarField.tsx
src/lib/: auth.test.ts  auth.ts  envScopes.test.ts  envScopes.ts  interpolation.test.ts  interpolation.ts  types.test.ts  types.ts  useVarHint.test.ts  useVarHint.ts
src/store/: collectionsStore.ts  envStore.ts  requestStore.ts
