[package]
name = "ruan"
version = "0.1.0"
description = "ruan — cliente HTTP file-based, otimizado pro Linux"
authors = ["vings"]
edition = "2021"

[lib]
name = "ruan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Servidor MCP standalone (STDIO/JSON-RPC). Reusa ruan_lib::store + ruan_lib::mcp.
[[bin]]
name = "ruan-mcp"
path = "src/bin/ruan-mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "stream", "multipart", "cookies"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
notify = "7"
thiserror = "2"
slug = "0.1"
percent-encoding = "2"

[dev-dependencies]
tempfile = "3"

# Otimizacao pro Linux: binario pequeno e rapido em release.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
